# PlaylistManager

./: .gitignore  CMakeLists.txt
data/: testroll.csv
include/: AudioFile.h  FileManager.h  Playlist.h  Podcast.h  Song.h  UserInterface.h
src/: AudioFile.cpp  AudioFile.h  AudioFiles.cpp  AudioFiles.h  FileManager.cpp  Library.cpp  Library.h  Playlist.cpp  Podcast.cpp  Podcast.h  Song.cpp  Songs.cpp  Songs.h  UserInterface.cpp  main.cpp
